admin statistics calculating mechanism added